infrastructure/ci/test-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: nginx
    app.kubernetes.io/instance: perspex
    app.kubernetes.io/managed-by: tilt
    app.kubernetes.io/name: nginx
  name: nginx
  namespace: perspex
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/instance: perspex
        app.kubernetes.io/managed-by: tilt
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"perspex","app.kubernetes.io/managed-by":"tilt","app.kubernetes.io/name":"nginx","app.kubernetes.io/version":"0.1.0"},"name":"nginx","namespace":"perspex"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":"http"}],"selector":{"app.kubernetes.io/instance":"perspex","app.kubernetes.io/name":"nginx"},"type":"ClusterIP"}}
  labels:
    app.kubernetes.io/instance: perspex
    app.kubernetes.io/managed-by: tilt
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 0.1.0
  name: nginx
  namespace: perspex
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: perspex
    app.kubernetes.io/name: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
