infrastructure/ci/testingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"perspex","app.kubernetes.io/managed-by":"tilt","app.kubernetes.io/name":"nginx","app.kubernetes.io/version":"0.1.0"},"name":"nginx","namespace":"perspex"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":"http"}],"selector":{"app.kubernetes.io/instance":"perspex","app.kubernetes.io/name":"nginx"},"type":"ClusterIP"}}
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/instance: perspex
    app.kubernetes.io/managed-by: tilt
    app.kubernetes.io/name: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 8000
